logic for get users by competence id added
